# barcode

./: .codacy.yml  .travis.yml  BarcodeException.h  CITATION.cff  CMakeLists.txt  EqSolvers.cc  HMC.cc  HMC.h  HMC_mass.cc  HMC_mass.h  HMC_models.cc  HMC_momenta.cc  HMC_momenta.h  IOfunctions.h  IOfunctionsGen.cc  IOfunctionsGen.h  Lag2Eul.cc  README.md  barcoderunner.cc  calc_power.h  call_hamil.h  debug.cc  field_statistics.cpp  field_statistics.h  init_par.cc  init_par.h  input.par  main.cc  massFunctions.h  math_funcs.cc  math_funcs.h  protocol.cc  protocol.h  random.hpp  rsd.h  sample_maker.cc  struct_main.h  transf.cpp  transf.h
barcode/: CMakeLists.txt  main.cc
barlib/: CMakeLists.txt
barlib/include/: Lag2Eul.h  barcoderunner.h  convolution.hpp  curses_funcs.h  debug.h  define_opt.h  fftw_array.h  gradient.hpp  init_par.h  interpolate_grid.hpp  massFunctions.h  math_funcs.h  pacman.hpp  protocol.h  rsd.h  sample_maker.h
barlib/include/hmc/leapfrog/: time_step.hpp
barlib/include/hmc/likelihood/: gaussian_independent.hpp  gaussian_random_field.hpp  poissonian.hpp
barlib/include/hmc/prior/: gaussian.hpp
barlib/src/: EqSolvers.cc  HMC.cc  HMC_models.cc  HMC_models_testing.cpp  HMC_models_unused.cpp  HMC_momenta.cc  IOfunctions.cc  IOfunctionsGen.cc  Lag2Eul.cc  calc_power.cc  call_hamil.cc  convolution.cpp  cosmo.cc  curses_funcs.cc  debug.cc  field_statistics.cpp  ini_reader.cpp  init_par.cc  pacman.cpp  protocol.cc  rsd.cc  transf.cpp
barlib/src/hmc/likelihood/: poissonian.cpp
barlib/src/hmc/prior/: gaussian.cpp
cmake/: hg_rev_filename.sh
cmake/Modules/: AddDefaultBinary.cmake  DownloadAndSetupFindFFTW.cmake  Options.cmake
include/: BarcodeException.h  EqSolvers.h  HMC_help.h  HMC_models.h  HMC_models_testing.hpp  IOfunctions.h  IOfunctionsGen.h  Lag2Eul.h  SPH_kernel.hpp  convenience.h  cosmo.h  curses_funcs.h  debug.h  disp_part.h  fftw_array.h  fftwrapper.h  ini_reader.hpp  massFunctions.h  math_funcs.h  pacman.hpp  random.hpp  rankorder.h  scale_space.hpp  struct_hamil.h
include/hmc/likelihood/: gaussian_random_field.hpp  lognormal_independent.hpp
planck/: bstream.h  constants.h  cxxutils.cc  cxxutils.h  datatypes.h  message_error.h  openmp_support.h  paramfile.h  simparams.h
src/: EqSolvers.cc  HMC.cc  HMC_help.cc  HMC_mass.cc  HMC_models.cc  HMC_momenta.cc  IOfunctions.cc  IOfunctionsGen.cc  Lag2Eul.cc  SPH_kernel.cpp  barcoderunner.cc  calc_power.cc  call_hamil.cc  convenience.cc  cosmo.cc  curses_funcs.cc  debug.cc  disp_part.cc  fftwrapper.cc  field_statistics.cpp  gradient.cpp  ini_reader.cpp  init_par.cc  interpolate_grid.cpp  main.cc  massFunctions.cc  math_funcs.cc  pacman.cpp  protocol.cc  random.cpp  rankorder.cc  rsd.cc  scale_space.cpp  transf.cpp
src/hmc/leapfrog/: time_step.cpp
src/hmc/likelihood/: gaussian_independent.cpp  gaussian_random_field.cpp  lognormal_independent.cpp  poissonian.cpp
test/: CMakeLists.txt  catch_main.cpp  io_array.cpp  parameter_input_file.cpp
test/data/: input.par
test/run/: input.par
tools/: 2D_corr_fct.cc  2D_corr_fct_interp.cc  2D_powspec.cc  CMakeLists.txt  LAG2EULer.cc  corr_fct.cc  density.cc  interp_upres.cc  poisson_upres.cc  powspec.cc
